--- a/src/Components/Projects/style.css
+++ b/src/Components/Projects/style.css
@@ -7,6 +7,7 @@
 h2 {
 	text-align: center;
 	margin-bottom: 3rem;
+	color: #006166;
 }
 
 .card-cont {
